<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">InspetorOnline</string>
    <!-- Strings related to login InspetorOnline-->
    <string name="prompt_email">Usuario (5511999999999)</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_verification">Codigo Verificacao</string>
    <string name="action_sign_in">Acessar</string>
    <string name="action_verify">Verificar</string>
    <string name="action_resend">Reenviar</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="welcome">"Bem Vindo "</string>
    <string name="invalid_username">Login Invalido</string>
    <string name="invalid_password">Senha dever ser maior que 5 caracteres</string>
    <string name="login_failed">Login Falhou</string>
    <string name="title_activity_task_manager">Gerenciador de Tarefas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inspection">Inspecao</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hint_line">Linha</string>
    <string name="hint_prefix">Prefixo</string>
    <string name="hint_location">Local</string>
    <string name="hint_vehicle_state">
        Limpeza e Conservacao Veiculo
    </string>
    <string name="hint_presentation_employees">
        Apresentacao Colaboradores
    </string>
    <string name="hint_vehicle_identification">
        Veiculo Devidamente Identificado
    </string>
    <string name="hint_personal_objects_cleaning">
        Limpeza Objetos Uso Pessoal
    </string>
    <string name="hint_vehicle_objects_conservation">
        Conservacao Objetos do Ônibus
    </string>
    <string name="hint_employee_identification">
        Colaborador Portando Cracha
    </string>
    <string name="hint_wheelchair_seat_belt">
        Cinto Motorista e Cadeirante
    </string>
    <string name="hint_objects_forbiden_to_role">
        Objetos Inadequados a Funcao
    </string>
    <string name="hint_vehicle_security_accessories">
        Acessorios de Seguranca
    </string>
    <string name="hint_impediment_to_inspection">
        Impedimento Dificultou a Inspecao
    </string>
    <string name="hint_inspection_rate">
        Nota para esta Inspeção
    </string>
    <string name="hint_comments">Comentarios</string>

    <string name="text_save">Salvar</string>
    <string name="cancel_text">Cancelar</string>

    <string name="error_line">Informe a Linha</string>
    <string name="error_prefix">Informe o Prefixo</string>
    <string name="error_location">Informe o Local</string>
    <string name="error_vehicle_state">
        Informe o Estado de Limpeza e Conservacao do Veiculo
    </string>
    <string name="error_presentation_employees">
        Informe como esta a Apresentacao do Colaboradores
    </string>
    <string name="error_vehicle_identification">
        Informe se o Veiculo esta Devidamente Identificado
    </string>
    <string name="error_personal_objects_cleaning">
        Informe o Estado de Limpeza dos Objetos de Uso Pessoal
    </string>
    <string name="error_vehicle_objects_conservation">
        Informe o Estado de Conservacao dos Objetos do Ônibus
    </string>
    <string name="error_employee_identification">
        Informe se o Colaborador esta Portando Cracha
    </string>
    <string name="error_wheelchair_seat_belt">
        Informe se o Cinto do Motorista e Cadeirante Funcionam
    </string>
    <string name="error_objects_forbiden_to_role">
        Informe se Ha Uso de Objetos Inadequados a Funcao
    </string>
    <string name="error_vehicle_security_accessories">
        Informe se Ha Uso dos Acessorios de Seguranca
    </string>
    <string name="error_impediment_to_inspection">
        Informe se Houve Impedimento que Dificultou a Inspecao
    </string>
    <string name="error_inspection_rate">
        De uma Nota de 0 a 10 para esta Inspeção
    </string>
    <string name="error_comments">
        Informe ao menos 5 caracteres para o Comentario
    </string>

    <string name="error_message_password">Informe a Senha</string>
    <string name="success_message">Sign Up Successful</string>
    <string name="service_not_available">Service Unavailability</string>
    <string name="invalid_lat_long_used">Invalid Location</string>
    <string name="no_address_found">Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">GeoCoder Unavailability</string>
    <string name="no_location_data_provided">No Location Found</string>
    <string name="status_code_sent">Codigo Enviado</string>
    <string name="status_verification_failed">Verificacao Falhou</string>
    <string name="status_verification_succeeded">Verificacao OK</string>
    <string name="status_sign_in_failed">Login Falhou</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>



    <string name="inspection_type">Selecione um Tipo:</string>

    <string name="hint_permanence_note">Observacao</string>
    <string name="hint_permanence_department">Setor</string>
    <string name="hint_permanence_initial_date">Date Inicial (HH:MM)</string>
    <string name="hint_permanence_final_date">Date Final (HH:MM)</string>
    <string name="error_permanence_department">Selecione um Setor</string>
    <string name="error_permanence_note">
        Informe ao menos 5 caracteres para a Observacao
    </string>
    <string name="error_permanence_initial_date">
        Date Inicial Permitida Ate 2 Horas Passadas
    </string>
    <string name="error_permanence_final_date">
        Date Final Permitida Sem Horas Futuras
    </string>

    <string name="hint_guidance_line">Linha</string>
    <string name="hint_guidance_direction">Sentido</string>
    <string name="hint_guidance_subject">Assunto</string>
    <string name="error_guidance_line">Selecione uma Linha</string>
    <string name="error_guidance_direction">Selecione um Sentido</string>
    <string name="error_guidance_subject">
        Informe ao menos 5 caracteres para o Assunto
    </string>

    <string name="hint_employee_type">Funcionario</string>
    <string name="hint_work_time">Periodo</string>
    <string name="hint_state">Situacao</string>
    <string name="hint_violation_type">Infracao</string>
    <string name="hint_department">Setor</string>
    <string name="error_violation_line">Selecione uma Linha</string>
    <string name="error_violation_prefix">Selecione um Prefixo</string>
    <string name="error_violation_employee_type">Selecione um Tipo de FUncionário</string>
    <string name="error_violation_work_time">Selecione um Período</string>
    <string name="error_violation_state">Selecione uma Situação</string>

    <string name="hint_route_diversion_note">Observação</string>
    <string name="hint_route_diversion_responsible_body">Orgão Responsável</string>
</resources>