<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="17dp">

    <ScrollView android:layout_height="match_parent" android:layout_width="match_parent">

        <LinearLayout android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:background="@color/background"
                android:id="@+id/input_layout_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp">

                <EditText
                    android:id="@+id/edit_text_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_route_diversion_note"
                    android:inputType="textImeMultiLine"
                    android:maxLines="10"
                    android:minLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:background="@color/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_permanence_department"
                android:layout_marginBottom="17dp"
                android:id="@+id/input_layout_permanence_department">

                <AutoCompleteTextView
                    android:id="@+id/permanence_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/permanence_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_save"
                android:textAllCaps="false"
                android:layout_marginBottom="77px"
                android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>